...
            android:textColor="?android:attr/colorPrimary"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:hint="@string/e_mail"
            android:textColorHint="#A7A7A7"
            app:boxStrokeColor="#EAEAEE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/custom_email_icon"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:focusable="true"
                android:nextFocusDown="@id/LoginPassword"
                app:boxStrokeColor="#EAEAEE" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_passwordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:drawableStart="@drawable/custom_password_icon"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#A7A7A7"
...
                android:inputType="textPassword"
                android:textStyle="bold"
                app:boxStrokeColor="#EAEAEE" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/login" />

...
